HACK-565: Fix bio width on tablet landscape

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -763,7 +763,7 @@ CSS MEDIA QUERIES FOR THEHACKERATI.COM
     }
 
     .teambio {
-        width: 490px;
+        width: 680px;
         margin-bottom: 1px;
         margin-top: 50px;
         position: relative;
